# openai_request_runner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
examples/: classify_languages.py  dataexample_output_lc_errors.jsonl  example_output_lc.jsonl  example_output_translate.jsonl  example_translate_requests.jsonl  translate.py  translation_queue.py
examples/data/: example_input_sharegpt.json  example_output_translate.jsonl  example_raw_requests_lc.jsonl  example_raw_requests_translation.jsonl
openai_request_runner/: __init__.py  openaischema.py  request_runner.py  utils.py
tests/: test_basic.py
