[tool.poetry]
name = "openai_request_runner"
version = "0.0.4"
description = "Slim Runner for batched OpenAI Requests"
authors = [
    "Jan Philipp Harries",
]
license = "MIT"
readme = "README.md"
packages = [{include = "openai_request_runner"}]
repository = "https://github.com/jphme/openai_request_runner"


classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
openai = "^0.27.2"
tiktoken = "^0.3.3"
pydantic = "^1.8.2"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest =  "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"