[tool.poetry]
name = "openai_request_runner"
version = "0.0.9"
description = "Slim Runner for batched OpenAI Requests"
authors = [
    "Jan Philipp Harries",
]
license = "MIT"
readme = "README.md"
packages = [{include = "openai_request_runner"}]
repository = "https://github.com/jphme/openai_request_runner"


classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openai = "^1.0.0"
tiktoken = "^0.3.3"
pydantic = "^2.0.2"
requests = "^2.26.0"
instructor = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest =  "*"
pytest-cov = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-ra", "--cov=openai_request_runner", "--cov-report=term-missing", "--no-cov-on-fail"]
testpaths = [
    "tests",
]

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = [".git", ".ruff_cache", ".venv", ".pytest_cache"]
ignore = ["E501"]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]